[BUGFIX] Correct text alignment from form checkbox

--- a/Resources/Public/Scss/Bootstrap5/ThemeCustom/Components/_form.scss
+++ b/Resources/Public/Scss/Bootstrap5/ThemeCustom/Components/_form.scss
@@ -5,6 +5,7 @@ form {
 }
 .form-check-label {
   span {
+    display: inline-block;
     margin-left: 0.4em;
     font-weight: normal;
   }
